fixed a few small bugs on mobile

--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ p {
     font-weight: bold;
     font-style: italic;
     font-size: 2.0rem;
-    text-align: justify;
 }
 
 li {
